objects/QIDC__MDM_Identifier_ims__c.object
<CustomObject>
    <description>This Object is used to store Identifiers details</description>
    <fields>
        <fullName>QIDC__DateTime_ims__c</fullName>
        <description>This field is used to store DateTime value.</description>
        <inlineHelpText>This field is used to store DateTime value.</inlineHelpText>
        <label>IdentifierDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QIDC__ID_ims__c</fullName>
        <description>This field is used to store identifier ID.</description>
        <inlineHelpText>This field is used to store identifier ID.</inlineHelpText>
        <label>ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__MDM_URI_ims__c</fullName>
        <description>This field is used to store MDM URI of identifiers.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field is used to store MDM URI of identifiers.</inlineHelpText>
        <label>MDM URI</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QIDC__Parent_Account_ims__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Identifier</relationshipLabel>
        <relationshipName>Identifier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QIDC__Parent_Contact_ims__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Identifier</relationshipLabel>
        <relationshipName>Identifier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QIDC__Type_ims__c</fullName>
        <description>This field will be used to Store the Type of identifier.</description>
        <inlineHelpText>This field will be used to Store the Type of identifier.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Identifier</label>
    <listViews>
        <fullName>QIDC__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Identifier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Identifiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>